force-app/main/default/objects/CustomTeams__Teams__c/CustomTeams__Teams__c.object-meta.xml
<CustomObject>
    <label>Teams</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>