force-app/main/default/objects/CustomTeams__Teams__c/fields/CustomTeams__Description__c.field-meta.xml
<CustomField>
    <fullName>CustomTeams__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>