force-app/main/default/objects/CustomTeams__Teams__c/fields/CustomTeams__Display_Warning__c.field-meta.xml
<CustomField>
    <fullName>CustomTeams__Display_Warning__c</fullName>
    <defaultValue>&quot;Deleting a team would delete the related records as well. Please delink the related records in order to avoid their deletion. Only Team Owner can delete a team&quot;</defaultValue>
    <label>Warning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>