force-app/main/default/objects/CustomTeams__Teams__c/fields/CustomTeams__Inactivate__c.field-meta.xml
<CustomField>
    <fullName>CustomTeams__Inactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select &quot;Inactivate&quot; to remove access for all team members to all related records. Once Inactivated teams cannot be activated back.</inlineHelpText>
    <label>Inactivate</label>
    <type>Checkbox</type>
</CustomField>