force-app/main/default/objects/CustomTeams__Teams__c/fields/CustomTeams__Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>CustomTeams__Owner_ID__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner ID</label>
    <type>Text</type>
</CustomField>