force-app/main/default/objects/CustomTeams__Teams__c/recordTypes/CustomTeams__Teams_Creation.recordType-meta.xml
<RecordType>
    <fullName>CustomTeams__Teams_Creation</fullName>
    <active>true</active>
    <label>Teams Creation</label>
</RecordType>