force-app/main/default/objects/CustomTeams__Teams__c/recordTypes/CustomTeams__Teams_Detail.recordType-meta.xml
<RecordType>
    <fullName>CustomTeams__Teams_Detail</fullName>
    <active>true</active>
    <label>Teams Detail</label>
</RecordType>