force-app/main/default/objects/CustomTeams__Teams__c/validationRules/CustomTeams__Do_not_allow_to_activate_again.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomTeams__Do_not_allow_to_activate_again</fullName>
    <active>true</active>
    <description>Do not allow to activate again</description>
    <errorConditionFormula>AND(
 ISCHANGED(CustomTeams__Inactivate__c),
 PRIORVALUE(CustomTeams__Inactivate__c) = true,
NOT( $Profile.Name = &quot;Sys Admin&quot; )
        )</errorConditionFormula>
    <errorMessage>Cannot Activate an Inactivated team</errorMessage>
</ValidationRule>