force-app/main/default/objects/CustomTeams__Teams__c/listViews/CustomTeams__All.listView-meta.xml
<ListView>
    <fullName>CustomTeams__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>