force-app/main/default/objects/CustomTeams__Teams__c/listViews/CustomTeams__My_Teams.listView-meta.xml
<ListView>
    <fullName>CustomTeams__My_Teams</fullName>
    <columns>NAME</columns>
    <columns>CustomTeams__Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Owned Teams</label>
</ListView>